# partum-artificium-client

./: .gitignore  CMakeLists.txt  partum-artificium-server.kdev4
include/: baseargumenterror.h  baseerror.h
include/renderer/ogre/: baseogreapplication.h  ogreapplication.h
lib/: CMakeLists.txt  CMakeLists.txt~  baseargumenterror.cpp  baseerror.cpp
lib/renderer/ogre/: CMakeLists.txt  baseogreapplication.cpp  ogreapplication.cpp
src/: CMakeLists.txt  partumartificium.cpp  partumartificium.cpp~  partumartificium.h  partumartificiumrenderer.cpp  partumartificiumrenderer.h
test/unit/include/: baseerrortest.h
